# cedurs264-libav2v4l2

./: .gitignore  .gitmodules  AvEncoder.h  CMakeLists.txt  Drive_V4L2Reader.hpp  UserEncLib.cpp  UserEncoder.hpp  main.c  main.cpp
CameraDrive/: Drive_V4L2Encoder.cpp  Drive_V4L2Reader.hpp  Drive_V4L2ReaderDefine.cpp
thirdpart/: setup.sh
